hw-04-magic-log - init

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>hw01-maven</module>
         <module>hw02-arraylist</module>
+        <module>hw04-magic-log</module>
     </modules>
 
     <properties>
