--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>hw04-magic-log</module>
         <module>hw06-atm</module>
         <module>hw08-serializer</module>
+        <module>hw09-diy-orm</module>
     </modules>
 
     <properties>
@@ -48,6 +49,11 @@
                 <artifactId>junit-jupiter-params</artifactId>
                 <version>5.4.2</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.197</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
