--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>hw06-atm</module>
         <module>hw08-serializer</module>
         <module>hw09-diy-orm</module>
+        <module>hw10-hibernate</module>
     </modules>
 
     <properties>
@@ -54,6 +55,11 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>1.4.197</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>5.4.2.Final</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
