hw-12-web-server - init, зависимость от модуля hw10-hibernate, заготовка под сервер в MyWebApp, сервлет с методом GET (получение списка пользователей)

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>hw08-serializer</module>
         <module>hw09-diy-orm</module>
         <module>hw10-hibernate</module>
+        <module>hw12-web-server</module>
     </modules>
 
     <properties>
