--- a/hw10-hibernate/pom.xml
+++ b/hw10-hibernate/pom.xml
@@ -28,6 +28,10 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
