--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
                 <artifactId>hibernate-core</artifactId>
                 <version>5.4.2.Final</version>
             </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
