hw-15-message-system - init, проба вебсокета

--- a/hw15-message-system/pom.xml
+++ b/hw15-message-system/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hw13-spring</artifactId>
+    <artifactId>hw15-message-system</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
@@ -43,6 +43,11 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
@@ -60,7 +65,7 @@
     </dependencies>
 
     <build>
-        <finalName>SpringWebServer</finalName>
+        <finalName>MessageSystem</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -84,4 +89,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
