--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>hw02-arraylist</module>
         <module>hw03-annotations</module>
         <module>hw04-magic-log</module>
+        <module>hw05-garbage-collector</module>
         <module>hw06-atm</module>
         <module>hw08-serializer</module>
         <module>hw09-diy-orm</module>
