--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>hw11-hibernate-cache</module>
         <module>hw12-web-server</module>
         <module>hw13-spring</module>
+        <module>hw16-message-server</module>
     </modules>
 
     <properties>
