--- a/hw16-message-server/message-server/pom.xml
+++ b/hw16-message-server/message-server/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>message-server</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
