--- a/hw16-message-server/pom.xml
+++ b/hw16-message-server/pom.xml
@@ -17,5 +17,8 @@
         <module>data-server</module>
     </modules>
 
+    <properties>
+        <spring.version>5.1.5.RELEASE</spring.version>
+    </properties>
 
 </project>
