--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>hw04-magic-log</module>
         <module>hw05-garbage-collector</module>
         <module>hw06-atm</module>
+        <module>hw07-atm-department</module>
         <module>hw08-serializer</module>
         <module>hw09-diy-orm</module>
         <module>hw10-hibernate</module>
