--- a/hw16-message-server/message-server/pom.xml
+++ b/hw16-message-server/message-server/pom.xml
@@ -20,6 +20,10 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
