hw-16-message-server - функциональность data-server, дорабокти message-server, частично функциональность web-server (не работает клиент в браузере)

--- a/hw16-message-server/data-server/src/main/resources/application.properties
+++ b/hw16-message-server/data-server/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+#Hibernate params
 datasource.url=jdbc:h2:mem:users_db
 connection.driver_class=org.h2.Driver
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 format_sql=true
 hibernate.hbm2ddl.auto=create
+
+#Message-Server params
+listened.queue=to-data-service
+server.port=8888
+server.host=localhost
