--- a/hw16-message-server/pom.xml
+++ b/hw16-message-server/pom.xml
@@ -15,6 +15,7 @@
         <module>web-server</module>
         <module>message-server</module>
         <module>data-server</module>
+        <module>message-server-starter</module>
     </modules>
 
 </project>
