--- a/hw16-message-server/message-server/pom.xml
+++ b/hw16-message-server/message-server/pom.xml
@@ -24,6 +24,11 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
 </project>
