--- a/hw16-message-server/data-server/src/main/resources/data-application.properties
+++ b/hw16-message-server/data-server/src/main/resources/data-application.properties
@@ -4,9 +4,12 @@ connection.driver_class=org.h2.Driver
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 format_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 
 #Message-Server params
 listened.queue=to-data-service
 server.port=8888
 server.host=localhost
+
+#Data-Server params
+data.server.name=data-service
